--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Cotizador | Frutilandia Cruz</title>
+<title>Cotizador | Raíz y Rama</title>
 <link rel="stylesheet" href="./styles.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
 <header>
-  <div class="logo-wrap"><img src="./assets/logo.png" id="logo" alt="Frutilandia Cruz" /></div>
+  <div class="logo-wrap"><img src="./assets/logo.png" id="logo" alt="Raíz y Rama" /></div>
   <div class="brand">
-    <h1>Frutilandia Cruz · Cotizador</h1>
+    <h1>Raíz y Rama · Cotizador</h1>
     <small>Fresco & Local</small>
   </div>
 </header>
@@ -36,10 +36,7 @@
       </div>
     </div>
 
-    <!-- quick category chips -->
-    <div class="chips" id="chips">
-      <!-- chips render here -->
-    </div>
+    <div class="chips" id="chips"></div>
 
     <table class="table" id="prod-table">
       <thead>
@@ -84,8 +81,8 @@
   </div>
 </div>
 
-  <!-- Toast notifications -->
-  <div id="toaster" aria-live="polite" aria-atomic="true"></div>
+<!-- Toasts -->
+<div id="toaster" aria-live="polite" aria-atomic="true"></div>
 
 <script src="./app.js"></script>
 </body>
